--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -18,8 +18,7 @@
 
 <body>
   <div class="container-fluid">
-    <h1>Device detail</h1>
-    <div class="row" style="margin-top: 20px">
+    <div class="row">
       <div class="col-sm-2">
         <ul class="nav flex-column">
           <li class="nav-item">
@@ -49,6 +48,7 @@
         </ul>
       </div>
       <div class="col-sm-10">
+        <h1>Device detail</h1>
         <div class="row">
           <div class="col-sm-12">
             <nav aria-label="breadcrumb">
