--- a/views/layouts/index.hbs
+++ b/views/layouts/index.hbs
@@ -12,6 +12,29 @@
 
   <!-- Custom styles for this template -->
   <link href="/style.css" rel="stylesheet">
+  <style>
+    html {
+      font-size: 1rem;
+    }
+
+    @include media-breakpoint-up(sm) {
+      html {
+        font-size: 1.2rem;
+      }
+    }
+
+    @include media-breakpoint-up(md) {
+      html {
+        font-size: 1.4rem;
+      }
+    }
+
+    @include media-breakpoint-up(lg) {
+      html {
+        font-size: 1.6rem;
+      }
+    }
+  </style>
 
   <title>{{title}}</title>
 </head>
