--- a/pages/style.css
+++ b/pages/style.css
@@ -18,10 +18,11 @@ body {
     padding: 0;
 }
 
-ul.nav {
+ul.flex-column {
     box-sizing: border-box;
-    padding: 20px;
+    padding: 40px 30px;
     height: 100vh;
+    background-color: #ccc;
 }
 
 h1 {
